--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
    <script src="./index.js" defer></script>
 </head>
 <body>
-    <div class="container">
+    <div style="max-width: 100px;" class="container">
       Hello 
     </div>
+    <script src="./script.js"></script>
 </body>
  
